---
title: edu.nust.engine.core.debug
config:
  look: classic
  layout: dagre
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
class DebugEllipse
class DebugPoint
class DebugRectangle
class DebugShape
DebugShape <|-- DebugEllipse : extends
DebugShape <|-- DebugPoint : extends
DebugShape <|-- DebugRectangle : extends